@@ -2,6 +2,8 @@
 	* New features:
 		- User can input binary data via ssdb-cli(2016-02-24)
 		- Add ip_filter relative commands(2016-02-17)
+	* Bug fixes:
+		- Fix bug when connecting to multi masters, the slave saves only one master's status(2016-03-01)
 * 1.9.2
 	* New features:
 		- Binlog capacity can be set in config file(2016-01-14)
